# advent-of-code-2024

./: .gitignore  Cargo.toml
src/: common.rs
