[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/common.rs"
name = "aoc2024"

[dependencies]
anyhow = "1.0.93"
indicatif = "0.17.9"
nom = "7.1.3"
rayon = "1.10.0"
tailcall = "1.0.1"
thiserror = "2.0.6"
tracing = "0.1.41"
tracing-indicatif = "0.3.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
